--- a/css/addition.css
+++ b/css/addition.css
@@ -1,16 +1,16 @@
 h1 {
     color: #f05f40;
-    text-shadow:
-        -1px -1px 0 #000,  
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.9)
 }
 
 .navbar-nav > li.nav-item > a.nav-link, #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
 
-    color: #f05f40 !important;
+    color: #f05f40 !important
 
+}
+
+.navbar-nav-up{
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.9)
 }
 
 header.masthead p {
@@ -24,6 +24,10 @@ header.masthead p {
 .project-div {
 	background: #f05f40 !important;
 	font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 .project-category {
     text-align: left;
