--- a/css/addition.css
+++ b/css/addition.css
@@ -1,11 +1,11 @@
 h1 {
-    color: #16861f;
+    color: #168744;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.9)
 }
 
 .navbar-nav > li.nav-item > a.nav-link, #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
 
-    color: #16861f !important
+    color: #168744 !important
 
 }
 
@@ -18,7 +18,7 @@ header.masthead p {
 }
 
 .project-div {
-	background: #16861f !important;
+	background: #168744 !important;
 	font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     justify-content: center;
     align-items: center;
