--- a/css/addition.css
+++ b/css/addition.css
@@ -57,5 +57,13 @@ header.masthead p {
         width: 100%;
         height: 100%;
     }
+    .col-lg-4 {
+        height: 450px;
+        width: 600px;
+    }
+    .col-md-6{
+        height: 300px;
+        width: 400px;
+    }
 
 }
