--- a/css/addition.css
+++ b/css/addition.css
@@ -56,14 +56,14 @@ header.masthead p {
         width: 100%;
         height: 100%;
     }
-/*    .col-lg-4 {
+    .col-lg-4 {
         height: 300px;
         width: 400px;
     }
     .col-md-6{
         height: 300px;
         width: 400px;
-    }*/
+    }
 
     .project-div {
         width: 400px;
