--- a/css/addition.css
+++ b/css/addition.css
@@ -47,8 +47,8 @@ header.masthead p {
     .title-div {
         position: absolute;
         top: 30%;
-        transform: translate(-15%, 0);
-        width: 100vw;
+        width: 100%;
+        text-align: center;
     }
 
     .title-div-wrapper {
@@ -56,19 +56,12 @@ header.masthead p {
         width: 100%;
         height: 100%;
     }
-    .col-lg-4 {
-        height: 300px;
-        width: 400px;
-    }
-    .col-md-6{
-        height: 300px;
-        width: 400px;
-    }
 
     .project-div {
         width: 400px;
         height: 300px;
     }
+
     .project-category {
         width: 400px;
     }
@@ -76,6 +69,7 @@ header.masthead p {
     .project-name {
         width: 400px;
     }
+
     .img-fluid {
         width: 400px;
         height: 300px;
